--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="contain2">
         <div class=search>
-            <input type="text" id="res_name"class="searchterm" placeholder="Enter Retaurant Name">
+            <input type="text" id="res_name"class="searchterm" placeholder="Enter Restaurant Name">
             <button type="submit"id="btn" class="searchbtn">
                 <i class="fa fa-search" style="font-size: 24px;"></i>
             </button>
