--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="contain2">
         <div class=search>
             <input type="text" id="res_name"class="searchterm" placeholder="Enter Restaurant Name">
-            <button type="submit"id="btn" class="searchbtn" onclick="fun(); fun2()>
+            <button type="submit"id="btn" class="searchbtn" onclick="fun(); fun2()">
                 <i class="fa fa-search" style="font-size: 24px;"></i>
             </button>
         </div>
